reorganized files and added enemy support
reorganized files into more logical structure and added support for enemies.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "config": "^2.0.1",
     "eslint": "^5.4.0",
+    "mysql2": "^1.6.1",
     "pg": "^7.4.3",
     "restify": "^7.2.1",
     "restify-cors-middleware": "^1.1.1",
